# dspy-kit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MIGRATION.md  Makefile  README.md  publish_worflow.sh  pyproject.toml
docs/: dspy_grader_benefits.md  grader_comparison.md  i18n_guide.md
dspy_kit/: __init__.py
dspy_kit/evaluation/: __init__.py
dspy_kit/evaluation/domains/: __init__.py
dspy_kit/evaluation/domains/customer_support/: __init__.py  graders.py
dspy_kit/evaluation/graders/: __init__.py  base.py  classification_graders.py  dspy_model_graders.py  model_graders.py  python_graders.py  string_graders copy.py  string_graders.py
dspy_kit/red_team/: __init__.py
dspy_kit/synthetic/: __init__.py
dspy_kit/templates/: __init__.py
dspy_kit/templates/adapters/: __init__.py  dspy_adapter.py
dspy_kit/templates/analysis/: README.md  __init__.py  template_judge.py
dspy_kit/templates/core/: __init__.py  inheritance.py  parser.py  template.py  tools.py
dspy_kit/templates/evaluation/: __init__.py  metrics.py  template_graders.py
dspy_kit/templates/i18n/: __init__.py  adapter.py  multilingual_template.py
dspy_kit/templates/integrations/: __init__.py  mcp_client.py
dspy_kit/templates/utils/: __init__.py  migrator.py
dspy_kit/templates/validation/: __init__.py  schemas.py  validator.py
dspy_kit/utils/: __init__.py
examples/: README.md  __init__.py  chinese_chat_adapter_comparison.py  classification_example.py  complex_routing_template_demo.py  data_driven_metrics_demo.py  data_driven_template_optimization.py  demo_i18n_templates.py  demo_llm_judge.py  demo_overview.py  demo_template_inheritance.py  demo_tool_integration.py  dspy_harmony_demo.py  dspy_mcp_example.py  flexible_field_grading.py  i18n_chinese_ecommerce.py  i18n_visual_comparison.md  mcp_integration_example.py  perfect_harmony_code.py  simple_chinese_adapter.py  simple_routing_usage.py  template_dspy_harmony.py  template_judge_grader.py
examples/customer_support/: customer_support_integration.py
examples/mcp_servers/: ecommerce_server.py
tests/: conftest.py  test_classification_graders.py  test_dspy_graders.py  test_i18n_system.py  test_mcp_live.py  test_model_graders_live.py  test_template_structure.py
tests/integration/: test_dspy_integration.py
tests/unit/: test_composite_graders.py  test_model_graders.py  test_string_graders.py
